<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tv_bg"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/etcontac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/contact"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/contact"
        android:layout_toEndOf="@+id/E"
        android:layout_toRightOf="@+id/E"
        android:background="@android:color/white"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/U"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Name"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/etUn"
        android:layout_toStartOf="@+id/etUn"
        android:background="@drawable/ev_bg"
        android:gravity="center"
        android:text="@string/university"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <TextView
        android:id="@+id/R"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/U"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/etrol"
        android:layout_toStartOf="@+id/etrol"
        android:background="@drawable/ev_bg"
        android:gravity="center"
        android:text="@string/roll"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <TextView
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/R"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/etrol"
        android:layout_toStartOf="@+id/etrol"
        android:background="@drawable/ev_bg"
        android:gravity="center"
        android:text="@string/contact"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/etrol"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/R"
        android:layout_alignBottom="@+id/R"
        android:layout_alignLeft="@+id/etcontac"

        android:layout_alignStart="@+id/etcontac"
        android:background="@drawable/ev_bg"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <TextView
        android:id="@+id/E"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/contact"
        android:layout_marginTop="19dp"
        android:layout_toLeftOf="@+id/etEmai"
        android:layout_toStartOf="@+id/etEmai"
        android:background="@drawable/ev_bg"
        android:gravity="center"
        android:text="@string/email"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <TextView
        android:id="@+id/etEmai"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/E"
        android:layout_alignBottom="@+id/E"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/ev_bg"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textView"
        android:layout_marginTop="28dp"
        android:layout_toEndOf="@+id/Name"
        android:layout_toRightOf="@+id/Name"
        android:foregroundGravity="center" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/etNam"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/etNam"
        android:layout_toStartOf="@+id/etNam"
        android:background="@drawable/ev_bg"
        android:gravity="center"
        android:text="Name"
        android:textColor="@android:color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/etNam"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView"

        android:background="@drawable/ev_bg"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <TextView
        android:id="@+id/etUn"
        android:layout_width="250dp"
        android:layout_height="25dp"
        android:layout_alignBaseline="@+id/U"
        android:layout_alignBottom="@+id/U"
        android:layout_alignParentEnd="true"

        android:layout_alignParentRight="true"
        android:background="@drawable/ev_bg"
        android:lines="1"
        android:maxLines="1"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSize15" />

    <Button
        android:id="@+id/edit"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_below="@+id/etEmai"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/selectInmage"
        android:layout_toRightOf="@+id/selectInmage"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:text="edit"
        android:textSize="12sp" />

    <Button
        android:id="@+id/selectInmage"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/edit"
        android:layout_toLeftOf="@+id/etEmai"
        android:layout_toStartOf="@+id/etEmai"
        android:background="@android:color/holo_blue_light"
        android:gravity="center_horizontal"
        android:text="@string/selectimage"
        android:textSize="12sp" />

    <Button
        android:id="@+id/save"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/edit"
        android:layout_toRightOf="@+id/edit"
        android:background="@android:color/darker_gray"

        android:gravity="center"
        android:text="SaveInfo"
        android:textSize="12sp" />

</RelativeLayout>